--- a/views/about.hbs
+++ b/views/about.hbs
@@ -4,7 +4,9 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>HELP!! HELP!! STATIC PAGE</h1>
+    <h1>{{title}}</h1>
+    <img src="/Img/me.png">
+    <p> created by {{name}}</p>
 </body>
 
 </html>
