--- a/views/help.hbs
+++ b/views/help.hbs
@@ -2,11 +2,10 @@
 <html>
 <head>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"></script>
 </head>
 <body>
     <h1>{{title}}</h1>
-    <p>Created by {{name}}</p>
 </body>
-
+        <p>This is the help file created by {{name}}</p>
+        <p>But also {{message}} to send.</p>
 </html>
