--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>{{title}}</h1>
+    {{>header}}
     <img src="/Img/me.png">
-    <p> created by {{name}}</p>
+    {{>footer}}
 </body>
 
 </html>
