--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -4,8 +4,10 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>{{title}}</h1>
+    {{>header}}
 </body>
-        <p>This is the help file created by {{name}}</p>
+    
+
+        {{>footer}}
         <p>But also {{message}} to send.</p>
 </html>
