--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,10 @@
-h1 {
-    color: grey
+body {
+    color: #333333;
+    font-family: arial;
+    max-width: 650px;
+    margin: 0 auto;
+    padding: 0 16px;
+
 }
 img { 
     width: 200px
