--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../../public/css/styles.css">
 </head>
 <body>
     {{>header}}
-    <img src="/Img/me.png">
+    <img class="portrait" src="https://drive.google.com/uc?id=1KQcac0wnG89lXoSM6R3SYqJpKZkcXmwb">
+    
     {{>footer}}
 </body>
 
