--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,16 @@ body {
     max-width: 650px;
     margin: 0 auto;
     padding: 0 16px;
+
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh
 }
+
+.main-content {
+    flex-grow: 1;
+}
+
 
 footer {
     color: #888888;
@@ -29,6 +38,6 @@ header a {
     text-decoration: none;
 }
 
-img { 
-    width: 200px;
+.portrait { 
+    width: 20px;
 }
