--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-             <link rel="stylesheet" href="/css/styles.css">
-            
+             <link rel="stylesheet" href="../../public/css/styles.css"> 
     </head>
     <body>
 {{>header}}
