--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"></script>
+    <link rel="stylesheet" href="../../public/css/styles.css">
+    <script src="../../public/js/app.js"></script>
 </head>
 <body>
+    <div class="main-content">
+         {{>header}}
+         <p> use this site to get your weather</p>
+    </div>
+
    {{>header}}
     {{>footer}}
 </body>
