--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -4,8 +4,11 @@
              <link rel="stylesheet" href="../../public/css/styles.css"> 
     </head>
     <body>
-{{>header}}
-{{errorMessage}}
+            <div class="main-content">
+                {{>header}}
+                {{errorMessage}}
+            </div>
+
 {{>footer}}
     </body>
 </html>
