--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -4,6 +4,11 @@
     <link rel="stylesheet" href="../../public/css/styles.css">
 </head>
 <body>
+    <div class="main-content">
+    
+
+
+    </div>
     {{>header}}
     <img class="portrait" src="https://drive.google.com/uc?id=1KQcac0wnG89lXoSM6R3SYqJpKZkcXmwb">
     
