--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-             <link rel="stylesheet" href="../../public/css/styles.css"> 
-    </head>
+              <link rel="stylesheet" href="../../public/css/styles.css">
+    <script src="../../public/js/app.js"></script>
+</head>
     <body>
             <div class="main-content">
                 {{>header}}
