--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../../public/css/styles.css">
+     <link rel="stylesheet" href="../../public/css/styles.css">
+    <script src="../../public/js/app.js"></script>
 </head>
 <body>
     <div class="main-content">
