--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <link rel="stylesheet" href="../../public/css/styles.css">
-    <script src="../../public/js/app.js"></script>
+    <link rel="stylesheet" href="/public/css/styles.css">
+     <script src="/public/js/app.js"></script>
 </head>
 <body>
+   
     <div class="main-content">
            {{>header}}
     <img class="portrait" src="https://drive.google.com/uc?id=1KQcac0wnG89lXoSM6R3SYqJpKZkcXmwb">
