--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <link rel="stylesheet" href="../../public/css/styles.css">
-    <script src="../../public/js/app.js"></script>
+     <link rel="stylesheet" href="/public/css/styles.css">
+    <script src="/public/js/app.js"></script>
 </head>
 </head>
 <body>
