Trying to figure out why css doen't work

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="/public/css/styles.css">
-     <script src="/public/js/app.js"></script>
+    <link rel="stylesheet" href="../../public/css/styles.css">
+    <title>About</title>
+ 
 </head>
 <body>
    
