--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -1,15 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
+    
      <link rel="stylesheet" href="/public/css/styles.css">
-    <script src="/public/js/app.js"></script>
-</head>
+    <title>Help</title>
+    <style>
+body {
+    color: #333333; 
+    font-family: arial;
+    max-width: 650px;
+    margin: 0 auto;
+    padding: 0 16px;
+
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh
+}
+
+.main-content {
+    flex-grow: 1;
+}
+
+
+footer {
+    color: #888888;
+    border-top: 1px solid #eeeeee;
+    margin-top: 16px;
+    padding: 16px 0;
+}
+
+header {
+    margin-top: 16px;
+    margin-bottom: 48px;
+}
+
+h1 {
+    font-size: 64px;
+    margin-bottom: 16px;
+}
+
+header a {
+    color: #888888;
+    margin-right: 16px;
+    text-decoration: none;
+}
+
+.portrait { 
+    width: 20
+    0px;
+}
+  
+</style>
 </head>
 <body>
     {{>header}}
 </body>
     
-
+<div class="main-content">
         {{>footer}}
         <p>But also {{message}} to send.</p>
+        </div>
 </html>
