--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
     <div class="main-content">
            {{>header}}
     <img class="portrait" src="https://drive.google.com/uc?id=1KQcac0wnG89lXoSM6R3SYqJpKZkcXmwb">
-    <img src="/../public/Img/me.png">
+    <img src="/templates/temppic.jpg">
     <img src="/public/Img/me.jpg">
 
 
