--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../public/css/styles.css">
+    <link rel="stylesheet" href="/../public/css/styles.css">
     <title>About</title>
  
 </head>
@@ -10,8 +10,8 @@
     <div class="main-content">
            {{>header}}
     <img class="portrait" src="https://drive.google.com/uc?id=1KQcac0wnG89lXoSM6R3SYqJpKZkcXmwb">
-    <img src="/templates/temppic.jpg">
-    <img src="/public/Img/me.jpg">
+    <img src= "../../templates/temppic.jpg" alt= " tempory Picture of me ">
+    <img src= "../../public/img/me.jpg" alt= "Picture of me">
 
 
     </div>
