--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
-    <head>
-              <link rel="stylesheet" href="/../web-server/public/css/styles.css">
-              <title>404</title>
-              
-</head>
-    <body>
-            <div class="main-content">
-                {{>header}}
-                {{errorMessage}}
-            </div>
 
-{{>footer}}
-    </body>
+<html>
+
+<head>
+    <link rel="stylesheet" href="/public/css/styles.css">
+</head>
+
+<body>
+    {{>header}}
+    <p>{{errorMessage}}</p>
+    {{>footer}}
+</body>
+
 </html>
