--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
-    <link rel="stylesheet" href="/../public/css/styles.css">
-    <title>About</title>
- 
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
-   
-    <div class="main-content">
-           {{>header}}
-    <img class="portrait" src="https://drive.google.com/uc?id=1KQcac0wnG89lXoSM6R3SYqJpKZkcXmwb">
-    <img src= "../../templates/temppic.jpg" alt= " tempory Picture of me ">
-    <img src= "../../public/img/me.jpg" alt= "Picture of me">
-
-
-    </div>
-    
+    {{>header}}
+    <img src="/img/me.jpg">
     {{>footer}}
 </body>
 
