--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,6 +12,12 @@
 <body>
     <div class="main-content">
               {{>header}}
+        <p>Use this site to get your weather</p>
+
+            <form>
+                <input placeholder="location">
+                <button>Search</button>
+            </form>
     </div>
   
     {{>footer}}
