added a heroku account to the program

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -42,3 +42,14 @@ header a {
     width: 200px
     0px;
 }
+
+input {
+    border: 1px solid #cccccc;
+    padding: 8px;
+}
+button {
+    cursor: pointer;
+    border: 1px solid #888888;
+    background: #888888;
+    padding: 8px;
+}
