--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
      
     <div class="main-content">
             {{>header}}
+            <p> this site was created by Gearoid it uses data from mapbox and darksky.net</p>
               <img class="portrait" src="/img/me.jpg">
     </div>
    
