--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,6 +13,10 @@ body {
 .main-content {
     flex-grow: 1;
 }
+img {
+    width: 250px;
+    
+}
 
 
 footer {
@@ -30,6 +34,7 @@ header {
 h1 {
     font-size: 64px;
     margin-bottom: 16px;
+    color: #888888
 }
 
 header a {
