not understanding why it work

--- a/public/views/index.hbs
+++ b/public/views/index.hbs
@@ -7,6 +7,6 @@
         </style>
     </head>
     <body>
-        <h1>FWeathe r r r </h1>
+        <h1>{{title}} Just in case it didnt work </h1>
     </body>
 </html>
