--- a/public/views/about.hbs
+++ b/public/views/about.hbs
@@ -5,7 +5,8 @@
         <script src="js/app.js"> </script>
     </head>
     <body>
-        <h1>From a static file THIS IS THE ABOUT FILE</h1>
+        <h1>{{title}}</h1>
         <img src="Img/me.jpg">
+        <p>Created by {{name}}</p>
     </body>
 </html>
