--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -5,7 +5,8 @@
 <head>
     <title>404</title>
     <link rel="icon" href="/img/weather.png">
-    <link rel="stylesheet" href="/public/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    
 </head>
 
 <body>
