--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,13 +18,13 @@
                 <button>Search</button>
             </form>
 
-        <p id ="message-1"></p>
+        <p id ="message-1"></p> // where the forcast will be 
         <p id ="message-2"></p>
 
     </div>
   
     {{>footer}}
- <script src="/js/app.js"></script> 
+ <script src="/js/app.js"></script> // runnning after everything is submitted
 </body>
 
 </html>
